# docs/swagger.json
@@ -50,8 +50,8 @@
                 "summary": "Add a new chain",
                 "parameters": [
                     {
-                        "description": "Chain network information",
-                        "name": "body",
+                        "description": "Add a new chain",
+                        "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -59,7 +59,20 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseData"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/chain/:chainId/asset": {
@@ -162,6 +175,26 @@
                 "AssetTypeERC1155",
                 "AssetTypeERC20"
             ]
+        },
+        "response.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "type": "string"
+                },
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.ResponseData": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                }
+            }
         },
         "utils.AddNewAssetParamsSwagger": {
             "type": "object",
